--- a/index.html
+++ b/index.html
@@ -49,12 +49,10 @@
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
                 <h1 class="display-1 fw-bold my-5">
-                    Comidas del fin <br> del mundo
+                    Carlos Saenz
                 </h1>
                 <p class="my-5">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
-                    dignissimos labore sequi. Cupiditate reiciendis eius dolore, illum adipisci harum voluptas iste
-                    mollitia inventore provident labore voluptatum nemo.
+                    Por varios años corri en diferenctes trackday con mis diferencias vehiculo.
                 </p>
                 <div class="mb-5 pb-5">
                     <button class="btn btn-lg btn-outline-info text-light me-4">Trabajos</button>
@@ -65,46 +63,36 @@
     </header>
 
 
-    <section id="Acerca-de-mi" class="container text-center my-5">
+    <section id="Autodromos" class="container text-center my-5">
 
 
-        <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
+        <h2 class="display-3 fw-bold my-4">Autodromos</h2>
 
         <p class="my-4">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
-            earum itaque cum sequi, dolorem optio vol
+            Principales Autodromos que corri.
         </p>
 
 
         <div class="row">
             <div class="col-12 col-md-4">
                 <i class="fas fa-camera fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
+                <h3 class="my-3 fw-bold">Autodromo San Antonio</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    El Autódromo San Antonio es un circuito de carreras ubicado en Alto de San Juan, comuna de San Antonio, Chile.iene una capacidad para 4.500 personas, una extensión total de 1.800 metros, 8 curvas y su recta más larga es de 700 metros. 
                 </p>
             </div>
             <div class="col-12 col-md-4">
                 <i class="fas fa-bullhorn fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Crítica culinaria</h3>
+                <h3 class="my-3 fw-bold">Autodromo Codegua</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    El circuito principal tiene un largo de 4.6 km, un ancho de pista de 13 m, con 16 m en la recta principal, zona de pits de 45000 m² y 20 paddocks en los boxes. Además, la torre de control se eleva hasta seis pisos y cuenta con instalaciones VIP, sala de prensa y acreditaciones.
                 </p>
             </div>
             <div class="col-12 col-md-4">
                 <i class="far fa-map fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
+                <h3 class="my-3 fw-bold">Autodromo Interlomas</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Se encuentra a 18 kilómetros al norte de Temuco, la capital de la Región de La Araucanía, al sur de Chile. Tiene una capacidad para 7000 personas, zona de boxes con 32 ubicaciones, cafetería, torre de control de 4 pisos, una extensión total de 2745 metros, 10 curvas y su recta más larga es de 500 metros
                 </p>
             </div>
         </div>
@@ -113,19 +101,16 @@
 
     <section id="Mis-trabajos" class="my-5 p-5 bg-info">
 
-        <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos</h2>
+        <h2 class="display-4 fw-bold text-center text-light mb-3">Mis Vehiculos</h2>
 
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
                     <div class="image-top" style="background-image: url(./assets/img/Skyline.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
+                        <h5 class="card-title fw-bold">Nissan Skyline R32 1993</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Explicabo iure sint, perspiciatis distinctio molestias nihil
-                            repudiandae neque rem adipisci repellendus libero illo quo
-                            blanditiis, velit quasi ad, recusandae voluptates officia.
+                            Motor de 6 cilidros en linea con su motor de 2 Litros turbo, traccion trasera, con un potencia de 220HP de fabrica. Dentro de las mejoras que realice, look completo de GTR, Jaula, Computadora, turbo mas grande, dentro de las principales mejoras.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -137,12 +122,9 @@
                 <div class="card">
                     <div class="image-top" style="background-image: url(./assets/img/auditt.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
+                        <h5 class="card-title fw-bold">Audi TT 2000</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                            consequatur quos error fuga excepturi quo. Laudantium optio
-                            pariatur laboriosam modi, ea molestias?
+                            Motor de 4 cilindros en linea con su motor de 2 litros y traccion en las cuatro ruedas con 230 HP.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -154,12 +136,9 @@
                 <div class="card">
                     <div class="image-top" style="background-image: url(./assets/img/370z.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Salmones de Alaska</h5>
+                        <h5 class="card-title fw-bold">Nissan 370Z 2010</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                            corporis facilis qui architecto dolor, accusamus eveniet
-                            exercitationem fugit. Quod autem neque ducimus.
+                            Motor de 6 cilindros en V, con un motor aspirado de 3.7 Litros, traccion trasera y que generaba 330 HP.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
