--- a/index.html
+++ b/index.html
@@ -78,21 +78,21 @@
                 <i class="fas fa-camera fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Autodromo San Antonio</h3>
                 <p class="my-3">
-                    El Autódromo San Antonio es un circuito de carreras ubicado en Alto de San Juan, comuna de San Antonio, Chile.iene una capacidad para 4.500 personas, una extensión total de 1.800 metros, 8 curvas y su recta más larga es de 700 metros. 
+                    El Autodromo San Antonio es un circuito de carreras ubicado en Alto de San Juan, comuna de San Antonio, Chile.iene una capacidad para 4.500 personas, una extensión total de 1.800 metros, 8 curvas y su recta más larga es de 700 metros. 
                 </p>
             </div>
             <div class="col-12 col-md-4">
                 <i class="fas fa-bullhorn fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Autodromo Codegua</h3>
                 <p class="my-3">
-                    El circuito principal tiene un largo de 4.6 km, un ancho de pista de 13 m, con 16 m en la recta principal, zona de pits de 45000 m² y 20 paddocks en los boxes. Además, la torre de control se eleva hasta seis pisos y cuenta con instalaciones VIP, sala de prensa y acreditaciones.
+                    El circuito principal tiene un largo de 4.6 km, un ancho de pista de 13 m, con 16 m en la recta principal, zona de pits de 45000 m² y 20 paddocks en los boxes. Además, la torre de control se eleva hasta seis pisos.
                 </p>
             </div>
             <div class="col-12 col-md-4">
                 <i class="far fa-map fa-3x my-3"></i>
                 <h3 class="my-3 fw-bold">Autodromo Interlomas</h3>
                 <p class="my-3">
-                    Se encuentra a 18 kilómetros al norte de Temuco, la capital de la Región de La Araucanía, al sur de Chile. Tiene una capacidad para 7000 personas, zona de boxes con 32 ubicaciones, cafetería, torre de control de 4 pisos, una extensión total de 2745 metros, 10 curvas y su recta más larga es de 500 metros
+                    Se encuentra a 18 kilometros al norte de Temuco, la capital de la Región de La Araucanía, al sur de Chile. Tiene una capacidad para 7000 personas, zona de boxes con 32 ubicaciones, cafetería, torre de control de 4 pisos, una extensión total de 2745 metros, 10 curvas y su recta más larga es de 500 metros
                 </p>
             </div>
         </div>
@@ -110,7 +110,7 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Nissan Skyline R32 1993</h5>
                         <p class="card-text">
-                            Motor de 6 cilidros en linea con su motor de 2 Litros turbo, traccion trasera, con un potencia de 220HP de fabrica. Dentro de las mejoras que realice, look completo de GTR, Jaula, Computadora, turbo mas grande, dentro de las principales mejoras.
+                            Vehiculo coupe con motor de 6 cilidros en linea con su motor de 2 Litros turbo, traccion trasera, con un potencia de 220HP de fabrica. Dentro de las mejoras que realice, look completo de GTR, Jaula, Computadora, turbo mas grande, dentro de las principales mejoras.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -124,7 +124,7 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Audi TT 2000</h5>
                         <p class="card-text">
-                            Motor de 4 cilindros en linea con su motor de 2 litros y traccion en las cuatro ruedas con 230 HP.
+                            Vehiculo coupe con motor de 4 cilindros en linea con su motor de 2 litros y traccion en las cuatro ruedas con 230 HP.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -138,7 +138,7 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Nissan 370Z 2010</h5>
                         <p class="card-text">
-                            Motor de 6 cilindros en V, con un motor aspirado de 3.7 Litros, traccion trasera y que generaba 330 HP.
+                            Vehiculo coupe con motor de 6 cilindros en V, con un motor aspirado de 3.7 Litros, traccion trasera y que generaba 330 HP.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -152,49 +152,10 @@
 
 
 
-    <section id="Contacto" class="container my-5">
-
-        <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
-
-        <p class="text-center my-4 d-none d-md-block">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Doloribus
-            sapiente, autem delectus totam expedita
-            animi corporis dolorem qui magnam, aspernatur officiis quasi culpa tempora est commodi. Voluptate beatae
-            tempora quaerat?</p>
-
-        <form>
-
-
-            <div class="form-group mb-4">
-                <label class="mb-2">Nombre</label>
-                <input class="form-control" placeholder="Nombre">
-            </div>
-
-            <div class="form-group mb-4">
-                <label class="mb-2">Correo electrónico</label>
-                <input class="form-control" placeholder="Correo electrónico" />
-            </div>
-
-
-            <div class="form-group">
-                <label class="mb-2">Mensaje</label>
-                <textarea class="form-control" placeholder="Escribe aquí tu mensaje"></textarea>
-            </div>
-
-            <div class="my-3 text-end">
-                <button class="btn btn-info text-light">Enviar</button>
-            </div>
-
-
-
-        </form>
-
-    </section>
-
-
-
     <footer class="bg-dark text-center text-light p-4">
-        <p class="mb-0">Olivia Ros 2019. Todos los derechos reservados.</p>
+        <p class="mb-0">Carlos Saenz 2024</p>
+        <p class="mb-0">Todos los derechos reservados</p>
+        
     </footer>
 
 
