--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/estilos.css">
+    <script src="https://kit.fontawesome.com/f7158e74fe.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -75,21 +76,21 @@
 
         <div class="row">
             <div class="col-12 col-md-4">
-                <i class="fas fa-camera fa-3x my-3"></i>
+                <i class="fa-solid fa-flag-checkered fa-bounce fa-2xl"></i>
                 <h3 class="my-3 fw-bold">Autodromo San Antonio</h3>
                 <p class="my-3">
                     El Autodromo San Antonio es un circuito de carreras ubicado en Alto de San Juan, comuna de San Antonio, Chile.iene una capacidad para 4.500 personas, una extensión total de 1.800 metros, 8 curvas y su recta más larga es de 700 metros. 
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="fas fa-bullhorn fa-3x my-3"></i>
+                <i class="fa-solid fa-car-burst fa-bounce fa-2xl"></i>
                 <h3 class="my-3 fw-bold">Autodromo Codegua</h3>
                 <p class="my-3">
                     El circuito principal tiene un largo de 4.6 km, un ancho de pista de 13 m, con 16 m en la recta principal, zona de pits de 45000 m² y 20 paddocks en los boxes. Además, la torre de control se eleva hasta seis pisos.
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="far fa-map fa-3x my-3"></i>
+                <i class="fa-solid fa-car-side fa-bounce fa-2xl"></i>
                 <h3 class="my-3 fw-bold">Autodromo Interlomas</h3>
                 <p class="my-3">
                     Se encuentra a 18 kilometros al norte de Temuco, la capital de la Región de La Araucanía, al sur de Chile. Tiene una capacidad para 7000 personas, zona de boxes con 32 ubicaciones, cafetería, torre de control de 4 pisos, una extensión total de 2745 metros, 10 curvas y su recta más larga es de 500 metros
